# Exams-Eng-Software

./: README.md  manage.py  pyproject.toml  run.py
app/: constants.py  data.sqlite  factory.py  initialize.py  models.py
app/auth/: controller.py  forms.py  loaders.py
app/controllers/: auth.py
app/exams/: controller.py  forms.py
app/questions/: controller.py  forms.py
app/reports/: controller.py
app/static/: components.js  exam.js  result.js
app/templates/: base.jinja2
app/templates/auth/: login.jinja2  register.jinja2
app/templates/exams/: details.jinja2  form.jinja2  search.jinja2  update_questions.jinja2  view.jinja2
app/templates/questions/: details.jinja2  form.jinja2  search.jinja2
app/templates/reports/: answers.jinja2  grades.jinja2
