[tool.poetry]
name = "exams-eng-software"
version = "0.1.0"
description = ""
authors = ["Augusto Suffert <augusto@suffert.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.5"
bootstrap-flask = "^2.2.0"
flask-wtf = "^1.1.1"
flask-migrate = "^4.0.4"
wtforms-sqlalchemy = "^0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
